updated database url

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 4000
-DATABASE_URL = mongodb+srv://Study:Mayank@cluster0.wqc6hqt.mongodb.net/StudyNotionPro
+DATABASE_URL = mongodb+srv://Study:91662212@cluster0.qjdfa2d.mongodb.net/StudyByte?retryWrites=true&w=majority
 
 
 # Email Sender..
