fixed mailSender timeout and updated port to 587

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DATABASE_URL = mongodb+srv://Study:91662212@cluster0.qjdfa2d.mongodb.net/StudyBy
 # Email Sender..
 MAIL_HOST = smtp.gmail.com
 MAIL_USER = mayanknarnoliya41@gmail.com
-MAIL_PASS = kmlhhwadicemksxk
+MAIL_PASS = cirtrfgbpmvcwdnu
 
 # JWT Token..
 JWT_SECRET = Mayank91
