--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 PORT = 4000
-DATABASE_URL = mongodb+srv://Study:91662212@cluster0.qjdfa2d.mongodb.net/StudyByte?retryWrites=true&w=majority
+DATABASE_URL = mongodb+srv://Study:ricr01CEgRl8Pa43@cluster0.o3hvdcf.mongodb.net/StudyByte
 
 
 # Email Sender..
 MAIL_HOST = smtp.gmail.com
-MAIL_USER = mayanknarnoliya41@gmail.com
-MAIL_PASS = cirtrfgbpmvcwdnu
+MAIL_USER = studybyte08@gmail.com
+MAIL_PASS = sobwsdxmictbpvgn
 
 # JWT Token..
 JWT_SECRET = Mayank91
