--- a/.env
+++ b/.env
@@ -1,17 +1,16 @@
-PORT = 4000
-DATABASE_URL = mongodb+srv://Study:MK@cluster0.y7jrzpu.mongodb.net/StudyByte
-
+PORT=4000
+DATABASE_URL=mongodb+srv://StudyByte:study@cluster0.qv5itqg.mongodb.net/StudyByte
 
 # Email Sender..
-MAIL_HOST = smtp.gmail.com
-MAIL_USER = mayanknarnoliya41@gmail.com
-MAIL_PASS = ahbgbbveywyqklox
+MAIL_HOST=smtp.gmail.com
+MAIL_USER=mayanknarnoliya41@gmail.com
+MAIL_PASS=ahbgbbveywyqklox
 
 # JWT Token..
-JWT_SECRET = Mayank91
+JWT_SECRET=Mayank91
 
 # Cloudinary Folder Name..
-FOLDER_NAME = Codehelp
+FOLDER_NAME=Codehelp
 
 # Cloudinary Details
 CLOUD_NAME = dvec76oig
